# dbt_customers

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  dbt_project.yml  justfile  profiles.yml  pyproject.toml
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/models/bronze/: bronze_customer_events.sql  bronze_customers.sql  bronze_inventory.sql  bronze_order_items.sql  bronze_orders.sql  bronze_payments.sql  bronze_products.sql  bronze_stores.sql  schema.yml
dbt_project/models/gold/: gold_customer_funnel.sql  gold_customer_metrics.sql  gold_daily_customer_events.sql  gold_daily_revenue.sql  gold_inventory_alerts.sql  gold_payment_analytics.sql  gold_product_performance.sql  gold_store_performance.sql  schema.yml
dbt_project/models/silver/: schema.yml  silver_customer_events.sql  silver_customer_events_incremental.sql  silver_customers.sql  silver_inventory.sql  silver_order_items.sql  silver_orders.sql  silver_payments.sql  silver_products.sql  silver_stores.sql
dbt_project/seeds/: sample_raw_customer_events.csv  sample_raw_customers.csv  sample_raw_inventory.csv  sample_raw_order_items.csv  sample_raw_orders.csv  sample_raw_payments.csv  sample_raw_products.csv  sample_raw_stores.csv
dbt_project/snapshots/: customers_snapshot.sql  inventory_snapshot.sql  products_snapshot.sql
scripts/: setup_database.sql
