[project]
name = "dbt-postgres-medallion"
version = "0.1.0"
description = "dbt project with PostgreSQL and medallion architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-postgres>=1.7.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]
